--- a/blocks/card.css
+++ b/blocks/card.css
@@ -4,6 +4,7 @@
   height: 361px;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
 }
 
 .card__image {
@@ -35,9 +36,21 @@
 .card__like-button {
   width: 21px;
   height: 19px;
-  background-image: url("../images/like.svg");
+  background-image: url(/images/like-icon-disabled.svg);
   background-color: transparent;
   border: none;
+}
+
+.card__delete-button {
+  width: 18px;
+  height: 19px;
+  background-image: url("../images/Trash.svg");
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  padding: 4px;
+  top: 18px;
+  right: 15px;
 }
 
 .card__like-button:hover {
