--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -80,6 +80,35 @@
   opacity: 0.8;
 }
 
+.modal__image {
+  object-fit: cover;
+  max-width: 100%;
+}
+
+.modal-image__content {
+  max-width: 75vw;
+  max-height: 75vh;
+  width: auto;
+  height: auto;
+  text-align: left;
+  font-family: "inter", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  position: relative;
+  display: flex;
+}
+
+.modal-image__title {
+  color: #ffffff;
+  font-size: 12px;
+  font: "Inter", sans-serif;
+  font-weight: 400;
+  line-height: 100%;
+  position: absolute;
+  left: 0;
+  top: calc(100% + 10px);
+}
+
 @media screen and (max-width: 320px) {
   .modal__container {
     width: 90%;
