--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -4,6 +4,8 @@
   max-width: 880px;
   margin: 0 auto;
   flex-wrap: wrap;
+  padding-top: 40px;
+  border-top: 1px solid #545454;
 }
 
 .profile__image {
@@ -45,6 +47,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
 }
 
 .profile__bio {
