--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -44,6 +44,13 @@
   color: #565656;
 }
 
+.modal__submit-button:disabled {
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+
 .modal__title {
   color: #000;
   font-weight: 900;
@@ -58,7 +65,6 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 14px;
   line-height: 1.2;
-  margin-bottom: 30px;
   padding: 0;
   color: #000;
 }
@@ -78,6 +84,14 @@
 
 .modal__submit-button.modal__submit-button:hover {
   opacity: 0.8;
+}
+
+.modal__error {
+  color: #ff0000;
+  font-size: 12px;
+  display: block;
+  min-height: 14px;
+  border-top: 1px solid #ff0000;
 }
 
 .modal__image {
