--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -95,14 +95,12 @@
 
 .profile__image-container {
   position: relative;
-  width: 120px; /* Use o tamanho real do seu projeto */
+  width: 120px;
   height: 120px;
   border-radius: 50%;
   overflow: hidden;
   cursor: pointer;
   z-index: 1;
-  /*display: block;
-  pointer-events: auto;*/
 }
 
 .profile__avatar-edit-button {
@@ -112,7 +110,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro semi-transparente */
-  background-image: url("../images/edit-icon.svg"); /* O caminho do seu ícone de lápis */
+  background-image: url("../images/edit-icon.svg");
   background-repeat: no-repeat;
   background-position: center;
   border: none;
