--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -36,7 +36,7 @@
 .card__like-button {
   width: 21px;
   height: 19px;
-  background-image: url(/images/like-icon-disabled.svg);
+  background-image: url(../images/like-icon-disabled.svg);
   background-color: transparent;
   border: none;
 }
@@ -44,7 +44,7 @@
 .card__delete-button {
   width: 18px;
   height: 19px;
-  background-image: url("../images/Trash.svg");
+  background-image: url(../images/Trash.svg);
   background-color: transparent;
   border: none;
   position: absolute;
@@ -54,10 +54,10 @@
 }
 
 .card__like-button:hover {
-  background-image: url("../images/like-icon-hover.svg");
+  background-image: url(../images/like-icon-hover.svg);
   cursor: pointer;
 }
 
 .card__like-button.card__like-button_active {
-  background-image: url("../images/like-icon-active.svg");
+  background-image: url(../images/like-icon-active.svg);
 }
