--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -110,7 +110,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro semi-transparente */
-  background-image: url("../images/edit-icon.svg");
+  background-image: url(../images/edit-icon.svg);
   background-repeat: no-repeat;
   background-position: center;
   border: none;
